--- a/JulianPerrottName/Html/ImageWrapDemo/WrapSphereDemo.html
+++ b/JulianPerrottName/Html/ImageWrapDemo/WrapSphereDemo.html
@@ -8,6 +8,6 @@
     <canvas id="myCanvas" width="150" height="150" style="border:1px solid #000000; background-color: #000000"></canvas>
     <br />
     <input type="range" id="rangeInput" name="rangeInput" min="-31" max="31">&nbsp;Drag to Rotate
-    <script src="./js/WrapSphereDemo.js"></script>
+    <script src="js/WrapSphereDemo.js"></script>
 </body>
 </html>
