Bundled JS and CSS

--- a/JulianPerrottName/Html/AnimateCss/CssAnimationDemo.html
+++ b/JulianPerrottName/Html/AnimateCss/CssAnimationDemo.html
@@ -6,6 +6,6 @@
     <script src="CssAnimationDemo.js"></script>
     <title>CSS Animation Demo - Julian Perrott</title>
 </head>
-<body id="page" style="background: #1E1E20 url(images/autumn-garden.jpg) center top no-repeat;">
+<body id="page" style="background: #1E1E20 url(images/autumn-garden.jpg) center top no-repeat; background-size: cover; background-position: center;">
 </body>
 </html>
